# Agentic-RAG-Research-Copilot

./: .env.example  AGENTS.md  PROGRESS.md  README.md  TODOS.md  agentic_rag_implementation_guide.md  agentic_rag_srs.md  app.py  main.py  pyproject.toml
.pytest_tmp/test_file_hash_matches_for_ide0/: first.txt
Sample/: agentic_rag_test_questions.md
Sample/northstar_benefits_rag_document_set/: 03_operations_runbook_meridian.md  04_compliance_security_handbook.md  06_qbr_strategy_memo_q1_2026.md  10_project_meridian_roadmap.md
data/: ingested_hashes.txt
data/chroma/: chroma.sqlite3
data/chroma/4fed8bf2-1260-4bf6-9dbd-427c892422f1/: index_metadata.pickle
data/uploads/: 00_FILE_MANIFEST.txt  00_overview.md  01_project_meridian_prd.md  02_meridian_architecture_design.md  05_incident_postmortem_intake_classifier - Copy.md  07_decision_log_meridian.md  08_customer_onboarding_guide - Copy.md  09_support_kb_meridian.md  all_documents_combined.txt
src/: agent.py  chunking.py  config.py  ingestion.py  prompts.py  retriever.py  schemas.py  utils.py  vector_store.py  vector_store_utils.py
tests/: test_agent.py  test_chunking.py  test_ingestion.py  test_retriever.py  test_schemas.py  test_utils.py  test_vector_store.py  test_vector_store_utils.py
tests/fixtures/: MANIFEST.txt  README.md  generate_fixtures.py
tests/fixtures/encoding/: invalid_utf8_bytes.txt  symbols_punctuation.txt  tabs_and_spaces.txt  utf8_accents.txt
tests/fixtures/odd_names/: README.TEST.MD  file with spaces.txt  mixed.Case.Md  notes.v1.txt  weird-name_123.txt
(+16 files in other folders)
