[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
